--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,8 +118,10 @@ commands:
           command: |
             find . -type d -name node_modules -prune -o -type d -name .cache -prune -o -name ".eslintrc.json" -exec sed -i 's#"functional/prefer-readonly-type": "off"#"functional/prefer-readonly-type": "error"#g' {} +
             lerna run eslint --no-bail >> branchoutput.txt || true
+            git reset --hard
             git checkout master
             git pull
+            find . -type d -name node_modules -prune -o -type d -name .cache -prune -o -name ".eslintrc.json" -exec sed -i 's#"functional/prefer-readonly-type": "off"#"functional/prefer-readonly-type": "error"#g' {} +
             lerna run eslint --no-bail >> masteroutput.txt || true
             join -v1 -v2 <(sort ./masteroutput.txt) <(sort ./branchoutput.txt)
             echo "###############################################################################################"
