--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,36 +50,35 @@ commands:
             sudo yarn global add firebase-tools@9.16.0
             sudo yarn global add semver
 
-  # & Publishing setup steps
-  build_setup:
-    description: setup the build for commands
+  # & Download/Restore yarn.lock cache
+  restore_yarn_cache:
+    description: Restore all bootstraped module
     steps:
-      - checkout
-
-      # ! Download and cache dependencies
       - restore_cache:
           keys:
             - yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
 
-      # ! Install Required Linux Binary (libvips is needed by sharp which is needed by gatsby)
+  # & Install Required Linux Binary (libvips is needed by sharp which is needed by gatsby)
+  install_linux_dependencies:
+    description: Download/Install all our linux Dependencies/Binaries
+    steps:
       - run:
           name: Required Linux packages
           command: if [ "$OSTYPE" = 'linux-gnu' ]; then sudo apt update -y && sudo apt install libvips libvips-dev pngquant -y; fi
 
+  # & output debug info
+  debug_installed:
+    description: Debug installed libraries/modules
+    steps:
       # ? Debug Step for Node/Npm/Yarn/Lerna/Firebase Versions
       - run:
           name: DEBUG(Node, NPM, Yarn, Lerna & Firebase Versions)
           command: |
-            echo -n "Node version: "
-            node --version
-            echo -n "NPM version: "
-            npm --version
-            echo -n "Yarn version: "
-            yarn --version
-            echo -n "Lerna version: "
-            lerna --version
-            echo -n "firebase version: "
-            firebase --version
+            echo -e "Node version: $(node --version) \n"
+            echo -e "NPM version: $(npm --version) \n"
+            echo -e "Yarn version: $(yarn --version) \n"
+            echo -e "Lerna version: $(lerna --version) \n"
+            echo -e "firebase version: $(firebase --version) \n"
 
       # ? Debug Step for OS version
       - run:
@@ -96,14 +95,15 @@ commands:
             cat ~/.npmrc
             echo "npm ping: ======"
             npm ping
-            echo "npm config list: ======"
-            npm config list
             echo "npm config ls -l: ======"
             npm config ls -l
             echo "yarn config list: ======"
             yarn config list
 
-      # ! Hoist all Dependencies
+  # & Hoist all dependencies
+  bootstrap:
+    description: Hoist all dependencies
+    steps:
       - run:
           name: lerna bootstrap
           no_output_timeout: 30m
@@ -111,28 +111,10 @@ commands:
             npm config set legacy-peer-deps true
             lerna bootstrap --ci && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && lerna link
 
-      # ! Diff Eslint Runs
-      # - run:
-      #     name: ESLINT new Code
-      #     no_output_timeout: 30m
-      #     command: |
-      #       find . -type d -name node_modules -prune -o -type d -name .cache -prune -o -name ".eslintrc.json" -exec sed -i 's#"functional/prefer-readonly-type": "off"#"functional/prefer-readonly-type": "error"#g' {} +
-      #       lerna run eslint --no-bail >> branchoutput.txt || true
-      #       git reset --hard
-      #       git checkout master
-      #       git pull
-      #       find . -type d -name node_modules -prune -o -type d -name .cache -prune -o -name ".eslintrc.json" -exec sed -i 's#"functional/prefer-readonly-type": "off"#"functional/prefer-readonly-type": "error"#g' {} +
-      #       lerna run eslint --no-bail >> masteroutput.txt || true
-      #       sed -i '/^\//!d' masteroutput.txt
-      #       sed -i '/^\//!d' branchoutput.txt
-      #       join -v1 -v2 <(sort ./masteroutput.txt) <(sort ./branchoutput.txt)
-      #       echo "###############################################################################################"
-      #       cat masteroutput.txt
-      #       echo "###############################################################################################"
-      #       cat branchoutput.txt
-      #       git checkout -
-
-      # ? Debug step for checking if there are any duplicate packages
+  # & Check for duplicate packages
+  check_duplicates:
+    description: Check for duplicate packages
+    steps:
       - run:
           name: DEBUG(Check if duplicate packages with different versions exist)
           command: |
@@ -142,22 +124,35 @@ commands:
             echo -e "\n\n $DUPLICATES \n\n"
             lerna exec --concurrency=1 --parallel=false --no-bail -- node /home/circleci/project/packages/polar-npm/src/npm-dump-dependencies.js | sort | uniq | tr " " "\n" | sed '/[0-9]/d' | sed -r '/^\s*$/d' | uniq -d | if [ $(wc -l) -gt "0" ]; then echo -e '\n\n\033[1mPLEASE FIX DUPLICATE PACKAGES WITH DIFFERENT VERSIONS\033[0m' && exit 1; fi
 
-      # ! Compile all Typescript Packages
+  # & Compile all lerna modules
+  compile:
+    description: compile all lerna modules
+    steps:
       - run:
           name: lerna run compile
           command: lerna run compile
 
+  # & lint all lerna modules
+  eslint:
+    description: lint all lerna modules
+    steps:
       - run:
           name: lerna run eslint
           command: lerna run eslint
 
-      # ! Save Cache
+  # & Save Cache
+  save_yarn_cache:
+    description: save hoisted modules
+    steps:
       - save_cache:
           paths:
             - ~/.cache/yarn
           key: yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
 
-      # ! Persist the files to carry over to the next stage
+  # & Persist Workspace
+  persist_workspace:
+    description: persist files to the next jobs
+    steps:
       - persist_to_workspace:
           root: /home/circleci/
           paths:
@@ -175,7 +170,15 @@ jobs:
     description: build the application for all the following steps
     steps:
       - global_modules_setup
-      - build_setup
+      - checkout
+      - restore_yarn_cache
+      - install_linux_dependencies
+      - debug_installed
+      - bootstrap
+      - eslint
+      - compile
+      - save_yarn_cache
+      - persist_workspace
 
   # @ Run Karma Test Suite
   karma:
@@ -211,7 +214,7 @@ jobs:
           name: test
           command: |
             cd /home/circleci/project
-            npx lerna run citest
+            lerna run citest
       - store_test_results:
           path: /home/circleci/project/packages
 
