change description and stage sort

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,19 +111,6 @@ commands:
             npm config set legacy-peer-deps true
             lerna bootstrap --ci && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && lerna link
 
-  # & Check for duplicate packages
-  check_duplicates:
-    description: Check for duplicate packages
-    steps:
-      - run:
-          name: DEBUG(Check if duplicate packages with different versions exist)
-          command: |
-            (cd packages/polar-shared && yarn run compile)
-            (cd packages/polar-npm && yarn run compile)
-            DUPLICATES=$(lerna exec --concurrency=1 --parallel=false --no-bail -- node /home/circleci/project/packages/polar-npm/src/npm-dump-dependencies.js | sort | uniq | tr " " "\n" | sed '/[0-9]/d' | sed -r '/^\s*$/d' | uniq -d)
-            echo -e "\n\n $DUPLICATES \n\n"
-            lerna exec --concurrency=1 --parallel=false --no-bail -- node /home/circleci/project/packages/polar-npm/src/npm-dump-dependencies.js | sort | uniq | tr " " "\n" | sed '/[0-9]/d' | sed -r '/^\s*$/d' | uniq -d | if [ $(wc -l) -gt "0" ]; then echo -e '\n\n\033[1mPLEASE FIX DUPLICATE PACKAGES WITH DIFFERENT VERSIONS\033[0m' && exit 1; fi
-
   # & Compile all lerna modules
   compile:
     description: compile all lerna modules
@@ -181,6 +168,19 @@ commands:
             echo "###############################################################################################"
             cat branchoutput.txt
             git checkout -
+
+  # & Check for duplicate packages
+  check_duplicates:
+    description: Check for duplicate packages
+    steps:
+      - run:
+          name: Check if duplicate packages with different versions exist
+          command: |
+            (cd packages/polar-shared && yarn run compile)
+            (cd packages/polar-npm && yarn run compile)
+            DUPLICATES=$(lerna exec --concurrency=1 --parallel=false --no-bail -- node /home/circleci/project/packages/polar-npm/src/npm-dump-dependencies.js | sort | uniq | tr " " "\n" | sed '/[0-9]/d' | sed -r '/^\s*$/d' | uniq -d)
+            echo -e "\n\n $DUPLICATES \n\n"
+            lerna exec --concurrency=1 --parallel=false --no-bail -- node /home/circleci/project/packages/polar-npm/src/npm-dump-dependencies.js | sort | uniq | tr " " "\n" | sed '/[0-9]/d' | sed -r '/^\s*$/d' | uniq -d | if [ $(wc -l) -gt "0" ]; then echo -e '\n\n\033[1mPLEASE FIX DUPLICATE PACKAGES WITH DIFFERENT VERSIONS\033[0m' && exit 1; fi
 
 # ~ Workflow Building Blocks
 jobs:
