--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,7 +252,7 @@ jobs:
           name: test
           command: |
             cd /home/circleci/project
-            lerna run citest
+            npx lerna run citest
       - store_test_results:
           path: /home/circleci/project/packages
 
