cleanup of mui packages...

--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -22,7 +22,7 @@
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "__test": "scripts/test.sh",
     "eslint": "eslint -c ./.eslintrc.json . --no-error-on-unmatched-pattern",
-    "webpack": "rm -rf dist/public && rm -rf .webpack-cache-loader && rm -rf .terser-webpack-plugin/ && mkdir -p dist/public && node --max_old_space_size=4096 ../../node_modules/.bin/webpack --config=webpack.config.js && pwd && ls -al dist/public && echo 'Webpack built successfully'",
+    "webpack": "rm -rf dist/public && rm -rf .webpack-cache-loader && rm -rf .terser-webpack-plugin/ && mkdir -p dist/public && npx --max_old_space_size=4096 webpack --config=webpack.config.js && pwd && ls -al dist/public && echo 'Webpack built successfully'",
     "webpack-serve": "node --max_old_space_size=4096 ../../node_modules/.bin/webpack serve --host=0.0.0.0",
     "find-unhandled-promises": "yarn run tslint | grep 'Promises must be handled appropriately' | grep -v 'web/test' ; true",
     "serve": "node scripts/serve.js",
@@ -118,10 +118,6 @@
     "@fortawesome/free-regular-svg-icons": "=5.13.0",
     "@fortawesome/free-solid-svg-icons": "=5.13.0",
     "@fortawesome/react-fontawesome": "=0.1.14",
-    "@material-ui/core": "=4.11.3",
-    "@material-ui/icons": "=4.11.2",
-    "@material-ui/lab": "=4.0.0-alpha.57",
-    "@material-ui/x-grid": "=4.0.0-alpha.35",
     "@nivo/bar": "=0.61.1",
     "@nivo/calendar": "=0.61.1",
     "@nivo/line": "=0.61.1",
@@ -193,6 +189,7 @@
     "polar-text-highlighter": "0.0.0",
     "polar-web-extension-api": "0.0.0",
     "polar-webapp-links": "0.0.0",
+    "polar-mui": "0.0.0",
     "prop-types": "=15.7.2",
     "react-async": "=10.0.1",
     "react-container-dimensions": "=1.4.1",
