--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -190,6 +190,7 @@
     "polar-web-extension-api": "0.0.0",
     "polar-webapp-links": "0.0.0",
     "polar-mui": "0.0.0",
+    "polar-ui-framework": "0.0.0",
     "prop-types": "=15.7.2",
     "react-async": "=10.0.1",
     "react-container-dimensions": "=1.4.1",
