--- a/packages/polar-mobile-app/package.json
+++ b/packages/polar-mobile-app/package.json
@@ -1,11 +1,18 @@
 {
   "name": "polar-mobile-app",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+  },
+  "workspaces": {
+    "nohoist": [
+      "*react-native*",
+      "*react-native*/**"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "=1.15.9",
