--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -112,6 +112,10 @@
   "dependencies": {
     "@antv/g6": "=4.3.5",
     "@emotion/is-prop-valid": "=1.1.0",
+    "@material-ui/core": "=4.11.3",
+    "@material-ui/icons": "=4.11.2",
+    "@material-ui/lab": "=4.0.0-alpha.57",
+    "@material-ui/x-grid": "=4.0.0-alpha.35",
     "@fortawesome/fontawesome-free": "5.13.0",
     "@fortawesome/fontawesome-svg-core": "=1.2.35",
     "@fortawesome/free-brands-svg-icons": "=5.13.0",
@@ -189,8 +193,6 @@
     "polar-text-highlighter": "0.0.0",
     "polar-web-extension-api": "0.0.0",
     "polar-webapp-links": "0.0.0",
-    "polar-mui": "0.0.0",
-    "polar-ui-framework": "0.0.0",
     "prop-types": "=15.7.2",
     "react-async": "=10.0.1",
     "react-container-dimensions": "=1.4.1",
