Fix some potential re-render issues.

--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -149,7 +149,6 @@
     "js-sha3": "0.8.0",
     "jszip": "=3.7.1",
     "lodash": "=4.17.15",
-    "material-ui-dropzone": "=3.3.0",
     "mobx": "=6.3.2",
     "mobx-react-lite": "=3.2.0",
     "moment": "=2.29.1",
@@ -190,7 +189,10 @@
     "polar-text-highlighter": "0.0.0",
     "polar-web-extension-api": "0.0.0",
     "polar-webapp-links": "0.0.0",
-    "polar-mui": "0.0.0",
+    "@material-ui/core": "=4.12.3",
+    "@material-ui/icons": "=4.11.2",
+    "@material-ui/lab": "=4.0.0-alpha.60",
+    "@material-ui/x-grid": "=4.0.0-alpha.37",
     "polar-ui-framework": "0.0.0",
     "prop-types": "=15.7.2",
     "react-async": "=10.0.1",
