--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,11 +156,11 @@ commands:
             FORK_POINT=$(git merge-base origin/master $CIRCLE_BRANCH)
             git checkout $FORK_POINT
             find . -type d -name node_modules -prune -o -type d -name .cache -prune -o -name ".eslintrc.json" -exec sed -i 's#"functional/prefer-readonly-type": "off"#"functional/prefer-readonly-type": "error"#g' {} +
-            lerna run eslint --no-bail >> forkpoint-output.txt || true
+            lerna run cieslint --no-bail >> forkpoint-output.txt || true
             git reset --hard
             git checkout $CIRCLE_BRANCH
             find . -type d -name node_modules -prune -o -type d -name .cache -prune -o -name ".eslintrc.json" -exec sed -i 's#"functional/prefer-readonly-type": "off"#"functional/prefer-readonly-type": "error"#g' {} +
-            lerna run eslint --no-bail >> branch-output.txt || true
+            lerna run cieslint --no-bail >> branch-output.txt || true
             sed -i '/^\//!d' forkpoint-output.txt
             sed -i '/^\//!d' branch-output.txt
             join -v1 -v2 <(sort ./forkpoint-output.txt) <(sort ./branch-output.txt)
