add polar metadata parser dep

--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -35,7 +35,8 @@
     "polar-react": "0.0.0",
     "polar-shared": "0.0.0",
     "polar-web-extension-api": "0.0.0",
-    "readability": "0.2.0-polar.2"
+    "readability": "0.2.0-polar.2",
+    "polar-page-metadata-parser": "0.0.0"
   },
   "devDependencies": {
     "@types/chai": "4.2.11",
