--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,7 +163,8 @@ commands:
             lerna run cieslint --no-bail >> branch-output.txt || true
             sed -i '/^\//!d' forkpoint-output.txt
             sed -i '/^\//!d' branch-output.txt
-            join -v1 -v2 <(sort ./forkpoint-output.txt) <(sort ./branch-output.txt)
+            OUTPUT=$(join -v1 -v2 <(sort ./forkpoint-output.txt) <(sort ./branch-output.txt))
+            if [ ! -z "$OUTPUT" ]; then echo $OUTPUT && exit 1; fi;
 
   # & Check for duplicate packages
   check_duplicates:
