--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,7 +164,9 @@ commands:
             sed -i '/^\//!d' forkpoint-output.txt
             sed -i '/^\//!d' branch-output.txt
             OUTPUT=$(join -v1 -v2 <(sort ./forkpoint-output.txt) <(sort ./branch-output.txt))
-            if [ ! -z "$OUTPUT" ]; then echo $OUTPUT && exit 1; fi;
+            RED='\033[0;31m'
+            NC='\033[0m'
+            if [ ! -z "$OUTPUT" ]; then echo -e "\n ${RED} Please Fix the Following Errors: \n ${NC} $OUTPUT" && exit 1; fi;
 
   # & Check for duplicate packages
   check_duplicates:
