--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "testit": "echo ./dist/polar-bookshelf_${npm_package_version}_amd64.snap",
     "clean": "rm -rf web/dist && rm -rf dist/public && rm -rf .webpack-cache-loader && rm -rf .terser-webpack-plugin && rm -rf tsconfig.tsbuildinfo",
-    "build-webapp": "yarn run clean && yarn run eslint && npx tsc && export NODE_ENV=production && export WEBPACK_TARGET=web && yarn run webpack",
+    "build-webapp": "yarn run clean && npx tsc && export NODE_ENV=production && export WEBPACK_TARGET=web && yarn run webpack",
     "setup-dist-appx": "cp web/js/dist_config/AppXDistConfig.ts web/js/dist_config/DistConfig.ts",
     "publish-linux-snapcraft": "snapcraft push --release stable ./dist/polar-bookshelf-${npm_package_version}-amd64.snap",
     "publish-webapp": "yarn run build-webapp && firebase use polar-32b0f && ./scripts/firebase-set-hosting && firebase deploy",
