--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "create-module": "(cd ./packages/polar-create-module && node src/CreateModule.js)",
     "update-modules": "lerna run --scope polar-create-module compile && lerna exec -- node $(pwd)/packages/polar-create-module/src/CreateModule.js --update",
     "lerna-yarn-list": "lerna exec -- 'yarn list > yarn-list.txt'",
-    "yarn-lock-conflicts": "cat yarn.lock |grep -E \"^[^ \\\"]\" |sort  |grep -Eo \"^[^@]+\" |sort |uniq -c |sort"
+    "yarn-lock-conflicts": "cat yarn.lock |grep -E \"^[^ \\\"]\" |sort  |grep -Eo \"^[^@]+\" |sort |uniq -c |sort |grep -v '   1'"
   },
   "deprecated": {},
   "keywords": [],
