--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -190,7 +190,10 @@
     "polar-text-highlighter": "0.0.0",
     "polar-web-extension-api": "0.0.0",
     "polar-webapp-links": "0.0.0",
-    "polar-mui": "0.0.0",
+    "@material-ui/core": "=4.11.3",
+    "@material-ui/icons": "=4.11.2",
+    "@material-ui/lab": "=4.0.0-alpha.57",
+    "@material-ui/x-grid": "=4.0.0-alpha.35",
     "polar-ui-framework": "0.0.0",
     "prop-types": "=15.7.2",
     "react-async": "=10.0.1",
