--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,6 +146,7 @@ commands:
           no_output_timeout: 30m
           command: |
             FORK_POINT=$(git merge-base origin/master $CIRCLE_BRANCH)
+            git reset --hard
             git checkout $FORK_POINT
             find . -type d -name node_modules -prune -o -type d -name .cache -prune -o -name ".eslintrc.json" -exec sed -i 's#"functional/prefer-readonly-type": "off"#"functional/prefer-readonly-type": "error"#g' {} +
             lerna run cieslint --no-bail >> forkpoint-output.txt || true
