refactor capture references to 'polar-web-capture'

--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -36,7 +36,8 @@
     "polar-shared": "0.0.0",
     "polar-web-extension-api": "0.0.0",
     "readability": "0.2.0-polar.2",
-    "polar-page-metadata-parser": "0.0.0"
+    "polar-page-metadata-parser": "0.0.0",
+    "polar-web-capture": "0.0.0"
   },
   "devDependencies": {
     "@types/chai": "4.2.11",
