remove jsdom/url capture

--- a/packages/polar-web-capture/package.json
+++ b/packages/polar-web-capture/package.json
@@ -23,8 +23,7 @@
     "polar-page-metadata-parser": "0.0.0",
     "polar-bookshelf": "0.0.0",
     "polar-html": "0.0.0",
-    "polar-epub-generator": "0.0.0",
-    "jsdom": "=16.7.0"
+    "polar-epub-generator": "0.0.0"
   },
   "devDependencies": {
     "polar-eslint": "0.0.0",
