--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -30,7 +30,7 @@
     "@google-cloud/firestore": "=4.13.2",
     "@google-cloud/storage": "=5.8.5",
     "@mailchimp/mailchimp_marketing": "=3.0.24",
-    "@types/blueimp-md5": "=2.18.0",
+    "@types/blueimp-md5": "^2.18.0",
     "@types/body-parser": "=1.19.1",
     "@types/cors": "=2.8.6",
     "@types/express": "=4.17.1",
@@ -41,7 +41,7 @@
     "@types/yargs": "=13.0.12",
     "archiver": "=5.3.0",
     "base58check": "2.0.0",
-    "blueimp-md5": "2.16.0",
+    "blueimp-md5": "^2.19.0",
     "body-parser": "=1.19.0",
     "cors": "=2.8.5",
     "directory-tree": "=2.2.9",
