--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/burtonator/polar-shared#readme",
   "devDependencies": {
-    "@types/blueimp-md5": "=2.18.0",
+    "@types/blueimp-md5": "^2.18.0",
     "@types/chai": "4.2.11",
     "@types/deep-equal": "=1.0.1",
     "@types/mocha": "=9.0.0",
@@ -48,7 +48,7 @@
   "dependencies": {
     "base-x": "=3.0.8",
     "base58check": "2.0.0",
-    "blueimp-md5": "2.16.0",
+    "blueimp-md5": "^2.19.0",
     "core-js": "3.16.0",
     "deep-equal": "=1.0.1",
     "js-sha3": "0.8.0",
