--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "**/@types/jsdom": "*",
     "**/@types/jsdom-global": "*",
     "**/@types/react": "*",
-    "**/firebase": "*",
-    "**/firebase-admin": "*",
-    "**/@google-cloud/firestore": "*",
+    "**/firebase": "=8.10.0",
+    "**/firebase-admin": "=9.12.0",
+    "**/@google-cloud/firestore": "=4.15.1",
     "**/@sentry/integrations": "*",
     "**/@types/pdfjs-dist": "2.1.71-polar.2",
     "**/@types/jest": "^26.0.24",
