add typemoq back in...

--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -223,6 +223,7 @@
     "string-to-stream": "=1.1.1",
     "summernote": "=0.8.18",
     "use-local-storage-state": "=6.0.0",
-    "uuid": "3.3.3"
+    "uuid": "3.3.3",
+    "typemoq": "=2.1.0"
   }
 }
