--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "14"
+    "node": ">=14"
   },
   "scripts": {
     "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@amplitude/node": "=1.8.0",
-    "@firebase/functions-types": "=0.4.0",
+    "@firebase/functions-types": "=0.5.0",
     "@google-cloud/firestore": "=4.15.1",
     "@google-cloud/storage": "=5.8.5",
     "@mailchimp/mailchimp_marketing": "=3.0.24",
@@ -47,7 +47,7 @@
     "directory-tree": "=2.2.9",
     "express": "=4.17.1",
     "firebase-admin": "=10.0.0",
-    "firebase-functions": "=3.14.1",
+    "firebase-functions": "=3.16.0",
     "js-sha3": "0.8.0",
     "mailgun.js": "=3.3.0",
     "node-fetch": "=2.6.1",
